syntax = "proto3";

option go_package = "/pb";

message UpperRequest{
    int64 id = 1;
    string name=2;
}

message platform{
    string name=1;
    string fansCount=2;
}

message UpperResponse{
    string name=1;
    platform platform = 2;

}